--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,29 +1,19 @@
-<div>
-<<<<<<< HEAD
+
   <%= form_with model: @plan, url: calendars_path, class: 'form' do |f| %>
-=======
-<%= form_with model: @plan, url: calendars_path, class: 'form' do |f| %>
->>>>>>> 1a6c9d77656c5c14733327e8db93a12364f4b031
     <%= f.label :日付を選択, class: 'lavel' %>
     <%= f.date_field :date, class: 'date-select' %>
     <%= f.label :予定を入力, class: 'lavel' %>
     <%= f.text_field :plan, class: 'text-input' %>
     <%= f.submit '保存' %>
-<<<<<<< HEAD
   <% end %>
-　　<div class=calendar>
-=======
-<% end %>
-  
 
-  <div class=calendar>
->>>>>>> 1a6c9d77656c5c14733327e8db93a12364f4b031
+  <div class='calendar'>
     <% @week_days.each do |day| %>
       <div class='item'>
         <div class='date'>
           <%=day[:month] %>/<%=day[:date] %><%=day[:wday] %>
         </div>
-         <ul class='content'>
+        <ul class='content'>
         <% if day[:plans].length != 0 %>
           <% day[:plans].each do |plan| %>
             <li class='plan-list'>・<%= plan %></li>
